--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hardhat:test": "yarn workspace @se-2/hardhat test",
     "test": "yarn hardhat:test",
     "format": "yarn next:format && yarn hardhat:format",
+    "lint": "yarn next:lint && yarn hardhat:lint",
     "start": "yarn workspace @se-2/nextjs dev",
     "next:lint": "yarn workspace @se-2/nextjs lint",
     "next:format": "yarn workspace @se-2/nextjs format",
