--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -33,8 +33,8 @@ jobs:
       - name: Compile contracts and generate typechain
         run: yarn compile & yarn generateTypes
 
-      - name: Run hardhat node, deploy contracts (& generate contracts typescript output)
-        run: yarn chain & yarn deploy
+      - name: Run hardhat node, deploy and test contracts
+        run: yarn chain & yarn deploy & yarn test
 
       - name: Run nextjs lint
         run: yarn next:lint --max-warnings=0
