--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -15,7 +15,8 @@
     "format": "prettier --write ./*.ts ./deploy/**/*.ts ./scripts/**/*.ts ./test/**/*.ts",
     "test": "REPORT_GAS=true hardhat test --network hardhat",
     "verify": "hardhat etherscan-verify",
-    "hardhat-verify": "hardhat verify"
+    "hardhat-verify": "hardhat verify",
+     "clean": "rm -rf artifacts cache node_modules"
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.6.1",
